--- a/branches/2.1/Public/Lib/ueditor/dialogs/image/image.html
+++ b/branches/2.1/Public/Lib/ueditor/dialogs/image/image.html
@@ -11,10 +11,10 @@
     <div class="wrapper">
         <div id="imageTab">
             <div id="tabHeads" class="tabhead">
-                <span tabSrc="remote"  class="focus"><var id="lang_tab_remote"></var></span>
-                <span tabSrc="local"><var id="lang_tab_local"></var></span>
-                <span tabSrc="imgManager"><var id="lang_tab_imgManager"></var></span>
-                <span tabSrc="imgSearch"><var id="lang_tab_imgSearch"></var></span>
+                <span tabSrc="remote"  class="focus" style="display:none;"><var id="lang_tab_remote"></var></span>
+                <span tabSrc="local" class="focus"><var id="lang_tab_local"></var></span>
+                <span tabSrc="imgManager" style="display:none;"><var id="lang_tab_imgManager"></var></span>
+                <span tabSrc="imgSearch" style="display:none;"><var id="lang_tab_imgSearch"></var></span>
             </div>
             <div id="tabBodys" class="tabbody">
                 <div id="remote" class="panel">
