--- a/Tpl/Admin/Default/Member/address.html
+++ b/Tpl/Admin/Default/Member/address.html
@@ -5,12 +5,12 @@
 <select id="province" name="province" class="select rounded city" style="font-family:'Courier New',Courier,monospace;" child_id="city" val="{$region['province']}">
     <option value="0" selected="selected">请选择省份</option>
 </select> 
-<select id="city" name="city" class="select rounded city"  style="font-family:'Courier New',Courier,monospace;" child_id="region" val="{$region['city']}">
+<select id="city" name="city" class="select rounded city"  style="font-family:'Courier New',Courier,monospace;" child_id="region1" val="{$region['city']}">
 
     <option value="0" selected="selected">请选择城市</option>
 
 </select>
-<select id="region" name="region" class="select rounded city"  style="font-family:'Courier New',Courier,monospace;" child_id="" val="{$region['region']}">
+<select id="region1" name="region1" class="select rounded city"  style="font-family:'Courier New',Courier,monospace;" child_id="" val="{$region['region']}">
 
     <option value="0" selected="selected">请选择地区</option>
 
@@ -38,7 +38,7 @@
         //如果当前选中的行政区ID小于等于0，则表示选择的是“请选择”，将后面的行政区select清楚
         $(clickObj).nextAll("select").hide().empty();
         //如果选中了“请选择”，则不理会。
-        if (parent_id <= 0) {
+        if (parent_id <= 0 || "region" ==  $(clickObj).attr("id")) {
             return false;
         }
 
