--- a/branches/2.1/Tpl/Admin/Default/Role/addRole.html
+++ b/branches/2.1/Tpl/Admin/Default/Role/addRole.html
@@ -35,7 +35,7 @@
                 <volist name="access_list" id="list">
                     <tr>
                         <td>
-                            <p style="padding-bottom:0px; text-align: right;">
+                            <p style="padding-bottom:0px; text-align: left;">
                                 <label>
                                     <input class="module-item" type="checkbox" name="access_node[]" value="{$list.id}">
                                     <span>&nbsp;{$list.module_name}&nbsp;</span>
