--- a/Tpl/Admin/Default/Common/incTop.html
+++ b/Tpl/Admin/Default/Common/incTop.html
@@ -1,5 +1,5 @@
 <div class="layout-header"> <!-- Title/Logo - can use text instead of image -->
-    <div id="title"><a href="./index_files/index.htm"></a></div>
+    <div id="title"><a href="{:U('Admin/Index/index')}"></a></div>
     <div id="topnav" class="top-nav">
         <ul>
             <li class="adminid" title="{$Think.session.admin_name}">登陆者&nbsp;:&nbsp;<strong>{$Think.session.admin_name}</strong></li>
